# student-career-willingness-predictor

./: ConsumingWebService.ipynb  README.md  TrainingAndWebService.ipynb  app.py  pyproject.toml  requirements.txt
models/: student_career_willingness_model.pkl
src/: __init__.py  student_career_willingness_predictor.py
