[project]
name = "student-career-app"
version = "1.0.0"
description = "Predicts a student's willingness to pursue a career using ML models based on attitude and behavior."
readme = "README.md"
requires-python = ">=3.9,<3.12"

dependencies = [
    "streamlit~=1.28",
    "pandas~=1.5",
    "numpy~=1.24",
    "scikit-learn~=1.3",
    "plotly~=5.15",
    "joblib~=1.3",
    "statsmodels~=0.14",
]